# claude

./: .env.enc  .env.example  .gitignore  .sops.yaml  CHANGELOG.md  CLAUDE.md  README.md  TASK_285_COMPLETION_SUMMARY.md  TASK_810_SUMMARY.md  docker-compose.override.example.yml  docker-compose.yml
HomeAssistant_config/: binary_sensor.yaml  climate.yaml  configuration.yaml  cover.yaml  ev_audi_connect.yaml  ha_export.md  light.yaml  number.yaml  sensor.yaml  switch.yaml  test
base/: Dockerfile  requirements.txt
docs/: energy-system.md  ha-config-auto-sync.md  ha-config-sync-env-example.txt  home-assistant.md  homelab-infrastructure.md  project-decisions.md
memora_service/: .gitignore  Dockerfile  README.md  docker-compose.yml  frontend.html  main.py  meeting_intelligence.py  requirements.txt  semantic_search.py  transcriber.py
nats/: README.md  docker-compose.yml  setup_streams.py
scripts/: build-base.sh  deploy-pull.sh  deploy-push.sh  fix-shelly-influx-outliers.py  ha-export.py  install-hooks.sh  new-service.sh  post-deploy-sync-ha.sh  secrets-decrypt.sh  secrets-edit.sh  secrets-encrypt.sh  sync-docs.sh  sync-ha-config.sh  test-ha-sync.sh
services/ollama-router/: CLAUDE.md  Dockerfile  MIGRATE.md  PROMETHEUS_CONFIG.md  config.yaml  pyproject.toml  verify_config.sh
services/ollama-router/router/: __init__.py  api_admin.py  api_ollama.py  api_openai.py  balancer.py  config.py  main.py  metrics.py  model_manager.py  models.py  node_manager.py  proxy.py  task_classifier.py
shared/: __init__.py  chroma_client.py  config.py  decision_journal.py  ha_client.py  (+8 more)
(+519 files in other folders)
